Fix overflowing conjugation boxes
Fixes #227.

--- a/frontend/less/search-ui.less
+++ b/frontend/less/search-ui.less
@@ -232,6 +232,8 @@
 .conjugation-explanation,
 .lenition-explanation {
 	font-size: 18px;
+	display: flex;
+	flex-wrap: wrap;
 }
 
 .conjugation-explanation .operator,
